# WHISPERBOUNCE

./: .gitignore  .gitmodules
hw/pcb/: controller.kicad_sch  eth_bridge.kicad_sch  usb_c.kicad_sch  usb_eth.kicad_sch  usb_hub.kicad_sch  whisperbounce.kicad_pcb  whisperbounce.kicad_pro  whisperbounce.kicad_sch
hw/pcb/whisperbounce-v1-301120/: whisperbounce-B_Cu.gbr  whisperbounce-B_Mask.gbr  whisperbounce-B_Silkscreen.gbr  whisperbounce-Edge_Cuts.gbr  whisperbounce-F_Cu.gbr  whisperbounce-F_Mask.gbr  whisperbounce-F_Paste.gbr  whisperbounce-F_Silkscreen.gbr  whisperbounce-In1_Cu.gbr  whisperbounce-In2_Cu.gbr  whisperbounce-job.gbrjob  whisperbounce.drl
sw/: CMakeLists.txt
sw/app/: CMakeLists.txt
sw/app/inc/: main.h
sw/app/src/: main.c
sw/board/: CMakeLists.txt  STM32F401CBUx_FLASH.ld
sw/board/inc/: stm32f4xx_hal_conf.h
sw/common/src/: syscalls.c
